infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: coldcaller-production
  labels:
    name: coldcaller-production
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: coldcaller-staging
  labels:
    name: coldcaller-staging
    environment: staging
